--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -1,5 +1,3 @@
-@use './breakpoints' as *;
-
 $font-family: 'Atkinson Hyperlegible Next', sans-serif;
 $size-font-base: 16px;
 
@@ -34,6 +32,106 @@ $size-font-body-small: clamp(12px, 1.1vw, 14px);
 // Labels
 $size-font-label-title: clamp(17px, 1.5vw, 20px);
 $size-font-label-subtitle: clamp(15px, 1.25vw, 17px);
+
+
+/* ----------------------------- */
+/* TYPOGRAPHY MIXINS */
+/* ----------------------------- */
+@mixin font-heading-h1 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h1;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-heading-h2 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h2;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-heading-h3 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h3;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-heading-h4 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h4;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-heading-h5 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h5;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-heading-h6 {
+  font-family: $font-family;
+  font-weight: $font-weight-bold;
+  font-size: $size-font-h6;
+  line-height: 130%;
+  letter-spacing: $letter-spacing-default;
+}
+
+@mixin font-subtitle {
+  font-family: $font-family;
+  font-size: $size-font-subtitle;
+  font-weight: $font-weight-regular;
+  line-height: 130%;
+  margin: 0;
+}
+
+@mixin font-strap-title {
+  font-family: $font-family;
+  font-size: $size-font-strap-title;
+  font-weight: $font-weight-regular;
+  line-height: 130%;
+  margin: 0;
+}
+
+@mixin font-strap-title-small {
+  font-family: $font-family;
+  font-size: $size-font-strap-title-small;
+  font-weight: $font-weight-regular;
+  line-height: 130%;
+  margin: 0;
+}
+
+@mixin font-body-default {
+  font-family: $font-family;
+  font-size: $size-font-body-default;
+  font-weight: $font-weight-regular;
+  line-height: 1.6;
+}
+
+@mixin font-body-large {
+  font-family: $font-family;
+  font-size: $size-font-body-large;
+  font-weight: $font-weight-regular;
+  line-height: 130%;
+  margin: 0;
+}
+
+@mixin font-body-small {
+  font-family: $font-family;
+  font-size: $size-font-body-small;
+  font-weight: $font-weight-regular;
+  line-height: 130%;
+  margin: 0;
+}
+
 
 // Mixins
 @mixin heading-level-1 {
