--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -97,6 +97,22 @@
     content: url('../../../../icons/icon-no-language.svg');
   }
 
+  .radio-group--with-icon--work-non-paid {
+    content: url('../../../../icons/icon-work-non-paid.svg');
+  }
+
+  .radio-group--with-icon--work-nothing-to-add {
+    content: url('../../../../icons/icon-work-nothing-to-add.svg');
+  }
+
+  .radio-group--with-icon--work-paid {
+    content: url('../../../../icons/icon-work-paid.svg');
+  }
+
+  .radio-group--with-icon--work-volunteer {
+    content: url('../../../../icons/icon-work-volunteer.svg');
+  }
+
   input[type='radio'] {
     &:checked + .radio-group--with-icon__label {
       background-color: $color-shade-blue-10;
