--- a/blocks/form/components/wizard/_wizard-theme.scss
+++ b/blocks/form/components/wizard/_wizard-theme.scss
@@ -1,4 +1,3 @@
-
 @use '../../../../styles/settings' as *;
 
 /* ----------------------------- */
@@ -123,7 +122,7 @@ main {
     }
 
     h4, h5, h6 {
-      color: #134276;
+      color: $color-primary-navy;
     }
 
     h1, h2, h3,
