--- a/styles/base/footer.scss
+++ b/styles/base/footer.scss
@@ -1,18 +1,16 @@
-
 @use '../../styles/settings' as *;
 
 /* ----------------------------- */
 /* SECTION 1 - DARK GRADIENT BACKGROUND + ICON LINKS */
 /* ----------------------------- */
 main > .section.columns-container:nth-of-type(1) {
-  background: linear-gradient(
-                  135deg,
-                  $color-primary-dark-navy 25%,
-                  $color-primary-navy 100%
-  );
+  background: linear-gradient(135deg, $color-primary-dark-navy 25%, $color-primary-navy 100%);
   color: $color-white;
-
-
+  padding: var(--Spacing-Spacing-200, 8px) var(--Grid-Margins, 32px);
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
 
   a {
     display: inline-flex;
@@ -41,14 +39,10 @@ main > .section.columns-container:nth-of-type(1) {
     &:focus {
       color: lighten($color-white, 10%);
     }
+  }
 
-
-    .section.columns-container h5 {
-      color: $color-shade-navy-40;
-    }
-
-
-
+  h5 {
+    color: $color-shade-navy-40;
   }
 }
 
@@ -62,9 +56,39 @@ main > .section.columns-container:nth-of-type(2) {
   background-position: top left;
   background-size: auto;
   color: $color-white;
+  padding: var(--Spacing-Spacing-200, 8px) var(--Grid-Margins, 32px);
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+
+  // Add inner shadow
+  box-shadow: inset 0 4px 8px 0 rgba(22, 44, 69, 0.6);
 
   a {
-    color: $color-white;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    color: $color-shade-blue-40;
+    text-align: left;
+
+    font-family: $font-family;
+    font-size: $size-font-body-default;
+    font-style: normal;
+    font-weight: $font-weight-medium;
+    line-height: 133%;
+    letter-spacing: $letter-spacing-default;
+    text-decoration: none;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      background: url('/images/footer-icon-blue-arrow-bend-right.svg') no-repeat center;
+      background-size: contain;
+    }
 
     &:hover,
     &:focus {
@@ -111,6 +135,23 @@ main > .section.columns-container:nth-of-type(3) {
 }
 
 /* ----------------------------- */
+/* COLUMNS: ALIGN CONTENT TO TOP */
+/* ----------------------------- */
+.columns.block.columns-4-cols > div {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  gap: $spacing-300;
+}
+
+.columns.block.columns-4-cols > div > div {
+  flex: 1 1 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* ----------------------------- */
 /* GENERAL FOOTER <a> STYLING */
 /* ----------------------------- */
 footer a {
@@ -129,7 +170,6 @@ footer h5 {
   color: $color-shade-navy-40;
 }
 
-
 /* ----------------------------- */
 /* GLOBAL ALIGNMENT OVERRIDES FOR FOOTER */
 /* ----------------------------- */
@@ -142,41 +182,6 @@ footer img {
   margin: 0;
   text-align: left;
 }
-
-/* ----------------------------- */
-/* SECTION 2 - MATCH SECTION 1 LINK STYLES */
-/* ----------------------------- */
-main > .section.columns-container:nth-of-type(2) a {
-  display: inline-flex;
-  align-items: center;
-  gap: 0.5rem;
-
-  color: $color-shade-blue-40;
-  text-align: left;
-
-  font-family: $font-family;
-  font-size: $size-font-body-default;
-  font-style: normal;
-  font-weight: $font-weight-medium;
-  line-height: 133%;
-  letter-spacing: $letter-spacing-default;
-  text-decoration: none;
-
-  &::before {
-    content: '';
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background: url('/images/footer-icon-blue-arrow-bend-right.svg') no-repeat center;
-    background-size: contain;
-  }
-
-  &:hover,
-  &:focus {
-    color: lighten($color-white, 10%);
-  }
-}
-
 
 /* ----------------------------- */
 /* GLOBAL ALIGNMENT FOR ALL FOOTER IMAGES */
@@ -192,13 +197,6 @@ footer .columns-img-col picture > img {
   text-align: left;
   justify-content: flex-start;
   align-items: flex-start;
-  text-align: left;
-}
-
-main > .section.columns-container:nth-of-type(1) .button-container,
-main > .section.columns-container:nth-of-type(2) .button-container,
-main > .section.columns-container:nth-of-type(3) .button-container {
-  all: unset;
 }
 
 /* ----------------------------- */
@@ -215,24 +213,7 @@ main > .section.columns-container:nth-of-type(3) p {
 /* ----------------------------- */
 
 /* Section 1 - Align images left */
-main > .section.columns-container:nth-of-type(1) {
-  img,
-  picture,
-  picture > img,
-  .columns-img-col,
-  .columns-img-col picture,
-  .columns-img-col picture > img {
-    display: block;
-    margin-left: 0;
-    margin-right: auto;
-    text-align: left;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: auto;
-  }
-}
-
-/* Section 2 - Align images left */
+main > .section.columns-container:nth-of-type(1),
 main > .section.columns-container:nth-of-type(2) {
   img,
   picture,
@@ -268,5 +249,11 @@ main > .section.columns-container:nth-of-type(3) {
   }
 }
 
-
-
+/* ----------------------------- */
+/* BUTTON CONTAINER RESET */
+/* ----------------------------- */
+main > .section.columns-container:nth-of-type(1) .button-container,
+main > .section.columns-container:nth-of-type(2) .button-container,
+main > .section.columns-container:nth-of-type(3) .button-container {
+  all: unset;
+}
